refactored galaxy config provider into core